
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Prevent deferred render on left nav trees, to prevent loading errors for js hooks
- Fixed bugs with MODx.grid.encodeModified/encode, plugin event saving
- Added loadCreateMenus JS event to modx-resource-tree modext widget
- Refactored js lang loading to allow for dynamic modification of strings
- [#MODX-1993] Moved config.inc.tpl to core/docs to prevent confusion
- Added description below TV rows in Resource edit
- [#MODX-1853] Fixed issue where reload button was above MODx.Browser in TV pane
- Switched Quick Create/Update Resource description field to more-used introtext field
- [#MODX-1992] Fixed error in modSnippet preventing multiple executions per request
- [#MODX-1983] Clarified package uninstall option message
- [#MODX-1982] Fixed broken cancel button on Package View page
- [#MODX-1989] Fixed incorrect var reference in getfiles processor
- Added extra pagination to dropdowns in mgr that might have large #s of records to add usability for large sites
- Fixed all Elements including Template Variables to properly respect modAccessCategory ACLs.
- Allow base-level Element Category ACL assignments
- Fixed some issues with Settings grid and lexicons, key not being displayed, etc
- [#MODX-1940] Resized lexicon grid toolbar to fit better in smaller resolutions;
- [#MODX-1950] Adjusted permissions to allow proper listing of Elements; checks 'list' policy on Element now rather than view_[element]
- [#MODX-1975] Added warning messages for PHP 5.2.0 and 5.1.6 versions in setup asking that users upgrade to 5.3.0+; will still allow installs, however, if the user has those versions