@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Allow for separate paths on derivative resource types based on a [classkey]_delegate_path setting that points to their controllers
 - Prevent deferred render on left nav trees, to prevent loading errors for js hooks
 - Fixed bugs with MODx.grid.encodeModified/encode, plugin event saving
 - Added loadCreateMenus JS event to modx-resource-tree modext widget
